style.css
/* Material icons */
.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

* {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    width: 100%;
    /* set height to viewport height */
    height: 100vh;
}

main {
}

nav {
    text-transform: uppercase;
}

#product-link {
    position: relative;
}
#product-list {
    position: absolute;
    top: 90%;
    right: 5%;
    z-index: 5;
}

/* Product link hover, show product list */
#product-link:hover #product-list {
    display: block;
    transition: 0.5s;
}

a {
    position : relative;
}

.nav-link a::after {
    content: '';
    position: absolute;
    bottom: -5px;
    left: 0;
    width: 100%;
    height: 0.1em;
    background-color: hotpink;
    opacity 1;
    transform: scale(0);
    transform-origin: center;
    transition: opacity 300ms, transform 300ms;
}

.nav-link a:hover::after,
.nav-link a:focus::after{
    transform: scale(1);
}


/* Home Page */
#welcome-paragraph-container {
    margin-top: 30%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 25%;
}

/* Circles */
#body-container {
    display: grid;
}
.body-layer-1 {
    z-index: 1;
}

.body-layer-2 {
    z-index: 2;
}

.body-layer-1, .body-layer-2 {
    grid-column: 1;
    grid-row: 1;
}

#foreground-container {
    background: rgba(225, 225, 225, 0.42);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(15px);
    -webkit-backdrop-filter: blur(15px);
    height: 100%;
}

#background-circle-container {
    position: relative;
    height: 100%;
}

.background-circle {
    border-radius: 50%;
}

/* Animate background circles to move randomly wihtin the container */
@keyframes move-one {
    0% {
        transform: translate(0, 0);
    }
    25% {
        transform: translate(100%, 100%);
    }
    50% {
        transform: translate(-50%, 75%);
    }
    75% {
        transform: translate(70%, 45%);
    }
    100% {
        transform: translate(0%, 0);
    }
}

@keyframes move-two {
    0% {
        transform: translate(0, 0);
    }
    25% {
        transform: translate(50%, 70%);
    }
    50% {
        transform: translate(65%, 25%);
    }
    75% {
        transform: translate(-30%, 80%);
    }
    100% {
        transform: translate(0, 0);
    }
}

@keyframes move-three {
    0% {
        transform: translate(0, 0);
    }
    25% {
        transform: translate(-80%, 50%);
    }
    50% {
        transform: translate(20%, -80%);
    }
    75% {
        transform: translate(-60%, -20%);
    }
    100% {
        transform: translate(0, 0);
    }
}

@keyframes move-four {
    0% {
        transform: translate(0, 0);
    }
    25% {
        transform: translate(-30%, 80%);
    }
    50% {
        transform: translate(80%, -50%);
    }
    75% {
        transform: translate(-20%, 80%);
    }
    100% {
        transform: translate(0, 0);
    }
}

#circle-one {
    width: 150px;
    height: 150px;
    background-color: #CE4760;
    position: absolute;
    top: 50px;
    right: 30px;
    animation: move-one 10s ease infinite;
}

#circle-two {
    width: 175px;
    height: 175px;
    background-color: #90E39A;
    position: absolute;
    top: 70px;
    left: 90px;
    animation: move-two 10s ease infinite;
    animation-delay: 2s;
}

#circle-three {
    width: 200px;
    height: 200px;
    background-color: #F2C94C;
    position: absolute;
    top: 400px;
    right: 50px;
    animation: move-three 10s ease infinite;
    animation-delay: 4s;
}

#circle-four {
    width: 225px;
    height: 225px;
    background-color: #2F80ED;
    position: absolute;
    top: 300px;
    left: 150px;
    animation: move-four 10s ease infinite;
    animation-delay: 6s;
}

#circle-five {
    width: 250px;
    height: 250px;
    background-color: #F2994A;
    position: absolute;
    bottom: 200px;
    right: 100px;
    animation: move-one 10s ease infinite;
    animation-delay: 6s;
}

#circle-six {
    width: 275px;
    height: 275px;
    background-color: #9B51E0;
    position: absolute;
    bottom: 100px;
    left: 50px;
    animation: move-two 10s ease infinite;
    animation-delay: 4s;
}

#circle-seven {
    width: 150px;
    height: 150px;
    background-color: #56CCF2;
    position: absolute;
    bottom: 150px;
    right: 200px;
    animation: move-three 10s ease infinite;
    animation-delay: 2s;
}

#circle-eight {
    width: 255px;
    height: 255px;
    background-color: #00c700;
    position: absolute;
    bottom: 350px;
    left: 150px;
    animation: move-four 10s ease infinite;
}



.product-item {
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.product-item:hover {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 18px 43px;
}

footer {
    position: sticky;
    bottom: 0;
    width: 100%;
    z-index: 5;
}

/*media queries*/
/* mobile */
@media screen and (max-width: 600px) {

    /* Home Page */
    #img-container-parent {
        width: 100%;
    }

    .img-container {
        width: 100%;
    }

    #card-container-parent {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
    }

    #welcome-paragraph-container {
        margin-top: 50%;
        margin-bottom: 30%;
        width: 80%
    }

    #card-container {
        display: grid;
        grid-template-columns: 1fr;
        width: 100%;
        justify-items: center;
        margin-top: 0;
    }

    #card-container li {
        width: 90%;
    }

    .link-text {
        display: none;
    }
}

/* Stagger animation */

.hide {
    opacity: 0;
    filter: blur(10px);
    transform: translateX(-100%);
    transition: all 0.7s ease-in;
}

.visible {
    opacity: 1;
    filter: blur(0);
    transform: translateX(0);
}

#welcome-paragraph-container:nth-child(1) {
    animation-delay: 2s;
}

/* About Page */
.dropdown-arrow {
    cursor: pointer;
}

.rotate {
    transform: rotate(180deg);
}

#faq-container {
    margin-top: 5%;
}

#about-container {
    margin-top: 30%;
    margin-bottom: 15%;
}

